--- a/package.json
+++ b/package.json
@@ -21,7 +21,11 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "bootstrap": "^3.3.7",
+    "console": "^0.7.2",
     "core-js": "^2.4.1",
+    "firebase": "^4.12.1",
+    "output": "0.0.0",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
